# Dice-Game

./: CMakeLists.txt  README.md  drive.cpp  tests.m.cpp
src/: dice.cpp  dice.h  game.cpp  game.h
tests/: test_dice.cpp  test_dice.h  test_game.cpp  test_game.h
